# ai-model-management-rag-system

./: DEMO.md  DesignDoc.md  README.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: python-package.yml
.streamlit/: config.toml
config/: schema_registry.json
demo/: DEMO.md  sample_input_output_1.md  sample_input_output_2.md  sample_input_output_3.md  sample_input_output_5.md  sample_input_output_7.md
demo/deepseek-llm/: sample_input_output_1.md  sample_input_output_2.md  sample_input_output_3.md  sample_input_output_4.md  sample_input_output_5.md  sample_input_output_6.md  sample_input_output_7.md
demo/deepseek-r1/: sample_input_output_1.md  sample_input_output_10.md  sample_input_output_2.md  sample_input_output_3.md  sample_input_output_4.md  sample_input_output_5.md  sample_input_output_6.md  sample_input_output_7.md  sample_input_output_8.md  sample_input_output_9.md
docs/: data_model.md
notebook_templates/: comparison_template.ipynb.j2  evaluation_template.ipynb.j2  visualization_template.ipynb.j2
src/: chroma_inspect.py  main.py  streamlit_main.py
src/cli/: ingest_images.py  ingest_images_cli.py  ingest_model_scripts.py  ingest_model_scripts_cli.py  query_cli.py
src/cli_runner/: image_processor_runner.py  script_processor_runner.py  ui_runner.py
src/colab_generator/: code_generator.py  colab_api_client.py  reproducibility_manager.py  resource_quota_manager.py  template_engine.py
src/core/: base_command_handler.py  notebook_generator.py  rag_system.py  search_result_processor.py
src/document_processor/: code_parser.py  image_analyzer.py  image_processor.py  image_search_manager.py  llm_based_code_parser.py  metadata_extractor.py  schema_validator.py
src/query_engine/: image_search_manager.py  query_analytics.py  query_parser.py  result_ranker.py  result_reranker.py  (+1 more)
templates/: aggregation_query_v1.0.tpl  general_query_v1.0.tpl  information_retrieval_v1.0.tpl  model_comparison_v1.0.tpl
(+171 files in other folders)
