[tool.poetry]
name = "ai-model-rag-system"
version = "0.1.0"
description = "AI Model RAG System"
authors = ["Yi-Nung Yeh <ynyeh0221@gmail.com>"]
packages = [
    { include = "ai_model_rag_system", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "*"
numpy = "*"
chromadb = { version = "*", optional = true }
torch = { version = "*", optional = true }
open_clip_torch = { version = "*", optional = true }
Pillow = { version = "*", optional = true }
torchvision = { version = "*", optional = true }
jinja2 = { version = "*", optional = true }
markdown = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest = "*"
pytest-cov = "*"
coverage = "*"

[tool.poetry.extras]
embedder = ["open_clip_torch", "Pillow", "torchvision", "torch"]
formatter = ["jinja2", "markdown"]
full = ["chromadb", "torch", "open_clip_torch", "Pillow", "torchvision", "jinja2", "markdown"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
